# hf-raid

./: README.md  full_concept.py  pyproject.toml
src/hf_raid/: split_files.py
